--- a/nodejs/08/package.json
+++ b/nodejs/08/package.json
@@ -4,7 +4,7 @@
   "description": "code coverage tool",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha"
+    "test": "istanbul cover node_modules/mocha/bin/_mocha"
   },
   "author": "",
   "license": "MIT",
